z-index and before size fixed.

--- a/src/features/misc/working-in-jp.css
+++ b/src/features/misc/working-in-jp.css
@@ -21,7 +21,7 @@
 
   position: relative;
 
-  z-index: 5;
+  z-index: 0;
 
   padding-bottom: 4%;
 }
