--- a/src/features/misc/workingholiday-in-jp.css
+++ b/src/features/misc/workingholiday-in-jp.css
@@ -312,7 +312,7 @@
   background-image: url(/round-bg.svg);
   display: block;
   width: 100vw;
-  height: 20rem;
+  height: 14rem;
   background-size: 100%;
   background-position: bottom;
 
